--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   flask:
-    image: apurwasingh/flask
+    image: kabitaawa43/flask
     build: .
     container_name: flask
     ports:
